# applegpu-runtime

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
backend_cpp/: applegpu_backend.cpp  applegpu_ffi.h  setup.py
benchmarks/: bench_mlp_cpp.py  bench_ops.py  bench_training.py
crates/client/: Cargo.toml
crates/client/src/: lib.rs  transport.rs
crates/core/: Cargo.toml  TEST_NOTE.md  build.rs
crates/gpu-service/: Cargo.toml
crates/python/: Cargo.toml
crates/python/src/: backend.rs  lib.rs  metal_backend.rs  socket_backend.rs
crates/wire/: Cargo.toml
docs/: BACKLOG.md
examples/: README.md  bert_inference.py  docker-compose-gpu.yml  gpt2_generate.py  pytorch_device_backend.py  resnet_inference.py  whisper_transcribe.py
python/applegpu_runtime/: __init__.py  autograd.py  compile_backend.py  cpp_backend.py  torch_backend.py
python/tests/: bench_comparison.py  test_amax.py  test_attention.py  test_autograd.py  test_backend.py  test_backward_ops.py  test_batched_ops.py  test_bert.py  test_blit_copy.py  test_class_api.py  test_compile_backend.py  test_compute.py  test_concat_all.py  test_concurrent_queues.py  test_conv2d_grad_weight.py  test_cpp_backend.py  test_deferred_sync.py  test_float16.py  test_foundation_ops.py  test_fusion.py  test_gelu_exact.py  test_gpt2.py  test_gpt2_training.py  test_grouped_conv.py  test_index_scatter.py  test_issue12_ops.py  test_lazy.py  test_limits.py  test_lstm_gru.py  test_maxpool_backward.py  test_multi_dtype.py  test_nd_tensors.py  test_norm_unique.py  test_numpy.py  test_pool.py  test_pool_indices.py  test_remote_ipc.py  test_resnet.py  test_sampling.py  test_scheduler.py  (+14 more)
scripts/: whisper_debug.py
swift/: Package.swift
swift/GPUContainer/: Package.resolved  Package.swift
(+129 files in other folders)
