[package]
name = "applegpu-python"
version.workspace = true
edition.workspace = true

[lib]
name = "applegpu_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
half = "2"
once_cell = "1"

# Wire crate is platform-independent — always available
applegpu-wire = { path = "../wire" }

[target.'cfg(target_os = "macos")'.dependencies]
applegpu-core = { path = "../core" }

[target.'cfg(target_os = "linux")'.dependencies]
applegpu-client = { path = "../client" }
